# trading-bot

./: .gitignore  _manager.py  _tracker.py  _trading_bot.py  backtesting.py  bot.py  broker.py  calc_border.py  chat_bot.py  config.json  config.py  data_processor.py  fetch_candle.py  manager.py  migration.py  pyproject.toml  requirements.txt  run.py  schemas.py  simulate.py  telegram_.py  telegram_bot.py  telegram_bot_async_test.py  tracker.py  trading_bot.py  utils.py
.github/workflows/: bot_runner.yml
app/: __init__.py  _broker.py  broker.py  data_processor.py  external_data_crawler.py  manager.py  run.py  telegram_bot.py  tracker.py  trading_bot.py
app/config/: config.py
app/models/: __init__.py  database.py  history.py
app/schemas/: __init__.py  schemas.py
app/utils/: __init__.py  exception_handler.py  price_utils.py  utils.py
config/: __init__.py  config.py  config_keys.py  env.py
constants/: __init__.py  config_keys.py
schemas/: __init__.py  constants.py  schemas.py
utils/: utils.py
